tests/warnings/ipsubnets6.stderr
warning: This range will yeild no values: IP1 >= IP2
 --> tests/warnings/ipsubnets6.rs:4:25
  |
4 |     let _ = ipsubnets6!("2001:db8::32:ffff", "2001:db8::32:23", 64);
  |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: This iterator requires the lower IP value first in it's arguments list.

error: invalid IP address syntax
 --> tests/warnings/ipsubnets6.rs:7:25
  |
7 |     let _ = ipsubnets6!("2001:db8::32::ffff", "2001:db8::32:23", 64);
  |                         ^^^^^^^^^^^^^^^^^^^^
